  - font changes
------ omnetpp-2.0b3 released ------
Mar 27, 2000
 - bugfix: conditional (?:) operator caused parse error [reported by Niko]
Apr 10, 2000
 - in the C++ sources, TRUE/FALSE (defines) replaced by true/false (C++ keywords)
 - in printf() statements, all "%lf","%lg","%le" was replaced by "%f","%g","%e"
Apr 13, 2000
 - ebnf.y: changed operator precedence to bind ||,&& thighter than ?:
   [suggested by Niko]
May 7, 2000
 - Makefile.vc improvements from Balazs Kelemen
May 19,2000
 - fixed <Ctrl-H> in text editor
------ omnetpp-2.0b4 released ------
------ omnetpp-2.0b5 released ------
July 17, 2000
 - accepts NED files on the command line
July 26, 2000
 - minor fixes on Edit|Find
Aug 7, 2000
 - makefile changes for RPM support
Aug 26, 2000
 - added .gnedrc
 - find/replace operation improved
 - implemented "find next"
 - find/replace dialog contents is now preserved
 - open/save dialogs now remember the directory
Aug 27, 2000
 - drag&drop creation of submodules now creates unique names (changed addItem,
   renameItem procs)
 - deleteItem proc improved
 - renaming improved; "rename..." added to canvas popup menu
Aug 29, 2000
 - command-line arg handling improved
Sep 30, 2000
 - improvement just for Cygwin: lexer now explicitly ignores '\r' (=CR) chars
Nov 14-20, 2000
 - display string handling rewritten. Now GNED won't delete from the
   display strings the tags it doesn't understand. New file: dispstr.tcl.
 - experimental XML support: GNED can now export and import XML files.
   (File|Import XML...,Export XML... menu items)
   Requires the TclXML package, at least version 1.2. (The contents of
   TclXML-1.2.tgz should be extracted under the tcl/lib/Tcl8.x directory.)
   New files: genxml.tcl, parsexml.tcl.
   BUG in the TclXML-1.2 parser: it silently discards attributes which contain
   '&' or '<' characters!!!!
Nov 20, 2000
 - removed bogus asserts around parsened.cc#70 and #140
TODO:
  delete disp str class from source

