@@ -226,7 +226,7 @@ Aug 29, 2000
  - command-line arg handling improved
 Sep 30, 2000
  - improvement just for Cygwin: lexer now explicitly ignores '\r' (=CR) chars
-Nov 14-20, 2000
+Nov 14-19, 2000
  - display string handling rewritten. Now GNED won't delete from the
    display strings the tags it doesn't understand. New file: dispstr.tcl.
  - experimental XML support: GNED can now export and import XML files.
@@ -236,8 +236,15 @@ Nov 14-20, 2000
    New files: genxml.tcl, parsexml.tcl.
    BUG in the TclXML-1.2 parser: it silently discards attributes which contain
    '&' or '<' characters!!!!
+Nov 19, 2000
+ - bugfix: removed bogus asserts around parsened.cc#70 and #140 which caused the
+   program to abort when NED code contained two submodules with the
+   same name when switching from text to graphics.
 Nov 20, 2000
- - removed bogus asserts around parsened.cc#70 and #140
+ - improvement: File|Close and File|Exit made more graceful -- the "Not saved,
+   save?" dialog now has a Cancel button
+ - improvement: implemented File|Save all
+ - bugfix: new submodules, modules, channels etc. now always get unique names
 TODO:
   delete disp str class from source
 
